# loam

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  lock-refresh.yml  release.yml
docs/: DESIGN.md  GUIDE.md  MIGRATION.md  PARITY.md
examples/: graviton_spawn.sh  h2_prospecting.sh  map_match.sh  zonal_stats.sh
examples/nextflow/: README.md  loam.nf
loam/: __init__.py  catalog.py  cli.py  indices.py  manifest.py  ops.py  plan.py  raster.py  run.py  shape.py  state.py  vector.py  viz.py  zonal.py
loam/compat/: __init__.py  sagemaker.py
tests/: test_contract.py  test_core.py  test_integration.py
