[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loam"
version = "0.1.0"
description = "Execution-agnostic geospatial operations (cloud-mask, band-math over Sentinel-2) for the spore.host substrate — an open replacement for SageMaker Geospatial's Earth Observation Jobs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "scttfrdmn" }]
keywords = ["geospatial", "sentinel-2", "stac", "band-math", "ndvi", "aws", "ec2", "spawn", "earth-observation"]
dependencies = [
    "numpy>=1.24",
    "rasterio>=1.3",
    "pystac-client>=0.7",
    "boto3>=1.28",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "mypy>=1.8"]

[project.scripts]
loam = "loam.cli:main"

[project.urls]
Homepage = "https://github.com/spore-host/loam"
Issues = "https://github.com/spore-host/loam/issues"

[tool.setuptools.packages.find]
include = ["loam*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
