[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name is "loam-geo" — the bare "loam" is taken on PyPI by an unrelated
# config-manager project. The IMPORT name is unchanged: `pip install loam-geo` then `import loam`.
name = "loam-geo"
version = "0.4.0"
description = "Execution-agnostic geospatial operations (cloud-mask, band-math over Sentinel-2) for the spore.host substrate — an open replacement for SageMaker Geospatial's Earth Observation Jobs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "scttfrdmn" }]
keywords = ["geospatial", "sentinel-2", "stac", "band-math", "ndvi", "aws", "ec2", "spawn", "earth-observation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.24",
    "rasterio>=1.3",
    "pystac-client>=0.7",
    "boto3>=1.28",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "mypy>=1.8", "build>=1.0"]
# Vector-enrichment ops (reverse-geocode). Offline GeoNames KD-tree — no network, deterministic,
# spot-safe. Optional so the core raster install stays lean: pip install loam-geo[vector].
vector = ["reverse_geocoder>=1.5"]

[project.scripts]
loam = "loam.cli:main"

[project.urls]
Homepage = "https://github.com/scttfrdmn/loam"
Issues = "https://github.com/scttfrdmn/loam/issues"
Changelog = "https://github.com/scttfrdmn/loam/blob/main/CHANGELOG.md"
Source = "https://github.com/scttfrdmn/loam"

[tool.setuptools.packages.find]
include = ["loam*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
# Register the integration marker so `-m integration` is recognized (and `--strict-markers`
# would not error). Live tests hit the network (Earth Search / public COGs) and are opt-in via
# LOAM_LIVE_TESTS=1 — they skip themselves otherwise, so plain `pytest` stays fully offline.
markers = [
    "integration: exercises the live network path (Earth Search STAC / /vsicurl COG reads)",
]

[tool.mypy]
# 3.12 (not the 3.10 support floor): numpy's bundled stubs use the 3.12+ `type`
# statement, which mypy refuses to parse under an older --python-version target. Our
# own code targets 3.10+; the CI matrix still runs pytest + ruff on 3.10–3.12.
python_version = "3.12"
ignore_missing_imports = true
